# Resolve

./: .gitmodules  CMakeLists.txt  README.md
include/Resolve/: Resolve.h
src/: Main.cpp  Resolve.cpp
